# manim-me

./: .gitignore  README.md  dev.cfg  dev_scene.cfg  prod_scene.cfg  prod_simulation.cfg  pyproject.toml  requirements.txt  setup.py
_utils/: FollowingLines.py  SourceCode.py  WaitingScene.py
binary_search/: Array.py
common/: ending.py
i++ vs ++i performance/: Sosi.py
projects/binary_search/: Array.py
projects/common/: ending.py
projects/tests/: LaggedStart.py
projects/utils/: ArrowMobject.py  ArrowMobjectUpdating.py  SourceCode.py  WaitingScene.py
projects/you_shall_not_use_null/: NullInMemory.py  code_scenes.py  contract.py  scenario.tex  thumbnail.py
src/_common/: ending.py
src/_utils/: FollowingLines.py  MeineLiebeScene.py  SourceCode.py  WaitingScene.py
src/background_noise/: dvd.py  network.py
src/detox/: detox_thumbnails.py
src/semigroup/: SemigroupScenes.py
src/stack/: stack.py
src/taxes/: TaxesScenes.py
src/tests/: 3x+1.py  bitwiseAnd.py  bouncing_ball.py  following_line.py  fractals.py  functions.py  getting_back.py  glow.py  gravity_simulation.py  line_after_dot.py  rotate.py  (+1 more)
stack/: stack.py
test/: GravitySimulation.py  fractals.py  gravity_simulation.py  line_after_dot.py  square_in_square.py  turtle.py
tests/: bitwiseAnd.py  bouncing_ball.py  cicloid.py  entropy.py  glow.py  gravity_simulation.py  rotation_complex.py  squares.py  turtle.py
utils/: ArrowMobjectUpdating.py  FollowingLines.py  SourceCode.py  WaitingScene.py
you_shall_not_use_null/: NullInMemory.py  code_scenes.py  contract.py  thumbnail.py
(+15 files in other folders)
